--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
 <body>
 
-
+<div class="container">
+    <div class="page-header">
+        <h1>Bootstrap carosuel</h1>
+    </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        
+    </div>
+</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
