cute cats pics added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Bootstrap Project</title>
+    <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -25,7 +25,44 @@
         <h1>Bootstrap carosuel</h1>
     </div>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        
+        <ol class="carousel-indicators">
+            <li data-target="myCarousel" class="active" data-slide-to="0"></li>
+            <li data-target="myCarousel" data-slide-to="1"></li>
+            <li data-target="myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item-active">
+                <img src="https://placekitten.com/1200/500">
+                <div class="carousel-caption">
+                <h3>The cutest cat ever</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries,
+                </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="https://placekitten.com/1200/490">
+                <h3>The cutest cat ever</h3>
+                <div class="carousel-caption"></div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries,
+                </p>
+            </div>
+            </div>
+            <div class="item">
+                <img src="https://placekitten.com/1200/500">
+                <div class="carousel-caption">
+                <h3>The cutest cat ever</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries,
+                </p>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
 
