--- a/index.html
+++ b/index.html
@@ -17,60 +17,65 @@
 
 </head>
 
-
 <body>
-
 <div class="container">
     <div class="page-header">
-        <h1>Bootstrap carosuel</h1>
+        <h1>Bootstrap Carousel</h1>
     </div>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel slide" id="myCarousel" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="myCarousel" class="active" data-slide-to="0"></li>
-            <li data-target="myCarousel" data-slide-to="1"></li>
-            <li data-target="myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" class="active" data-slide-to="0"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
-            <div class="item-active">
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
                 <img src="https://placekitten.com/1200/500">
                 <div class="carousel-caption">
-                <h3>The cutest cat ever</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries,
-                </p>
+                    <h4>The cutest cat ever</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                        and scrambled it to make a type specimen book.</p>
                 </div>
-            </div>
-            <div class="item">
-                <img src="https://placekitten.com/1200/490">
-                <h3>The cutest cat ever</h3>
-                <div class="carousel-caption"></div>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries,
-                </p>
-            </div>
             </div>
             <div class="item">
                 <img src="https://placekitten.com/1200/500">
                 <div class="carousel-caption">
-                <h3>The cutest cat ever</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries,
-                </p>
+                    <h4>The cutest cat ever</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                        and scrambled it to make a type specimen book.</p>
                 </div>
             </div>
-
+            <div class="item">
+                <img src="https://placekitten.com/1200/500">
+                <div class="carousel-caption">
+                    <h4>The cutest cat ever</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                        and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
         </div>
+        <a class="left carousel-control" href="#myCarousel" role="button"data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button"data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
     </div>
+
 </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+
+
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+
+<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
